# logo-mosaic-server

./: .gitignore  Cargo.toml  Makefile  README.md  test.rest
examples/: convert_into_triangle_mosiac_grids.rs  demo1.rs  demo2.rs  draw_canvas_filled_with_rect.rs  draw_canvas_filled_with_rectangles.rs  draw_demo.rs  draw_empty_canvas.rs  draw_image.rs  full_demo.rs  generate_mosiac_grids_of_logo_img.rs  pick_logo_shapes.rs
logo-mosaic-web/: package.json  pnpm-lock.yaml
rest/: activity_api.rest  canvas_api.rest  image_api.rest
src/: lib.rs  main.rs  utils.rs
src/process/: canvas_generate.rs  canvas_grid_pick.rs  canvas_process.rs  canvas_shape_pick.rs  image_draw.rs  image_process.rs  mod.rs
src/process/canvas/: mod.rs  reactangle.rs  triangle.rs
src/repo/: activity_repo.rs  image_repo.rs  mod.rs
src/web/: activity.rs  canvas.rs  image.rs  mod.rs
src/web/activity/: create.rs  detail.rs  list.rs  mod.rs  reset.rs  sign_in.rs
src/web/canvas/: mod.rs
src/web/image/: convert_mosaic.rs  list.rs  mod.rs
static/: index.html
